# wps-backend

./: CMakeLists.txt  README.md
backend/: .eslintignore  .eslintrc  .gitignore  app.js  package.json  readme.md
backend/batch/: batch_config.js  index.js
backend/config/: developer.json  development.json
backend/deploy/: eco_developer.json  eco_development.json
backend/doc/: mongo.txt
backend/external_apis/: eos_api.js
backend/libs/: enum.js  error.js  log.js  util.js
backend/libs/api/: committee.js  proposal.js  proposer.js  stats.js  user.js
backend/libs/batch/process_actions/: index.js
backend/libs/batch/process_actions/committee/: index.js
backend/libs/batch/process_actions/delegate/: index.js
backend/libs/batch/process_actions/proposal/: index.js
backend/libs/batch/update_proposals/: index.js
backend/libs/batch/update_summary/: index.js
backend/libs/batch/update_votings/: check_voting.js  index.js  stakeunstake.js  unvote.js  vote.js
backend/models/mongo/: index.js  lib_action.js  lib_action_stake.js  lib_action_unstake.js  lib_committee.js  lib_proposal.js  lib_proposer.js  lib_reviewer.js  lib_summary.js  lib_update_proposal.js  lib_update_voting.js  lib_voter_info.js  lib_voting_info.js  user.js  wps_info.js
backend/models/redis/: index.js  redis_client.js
backend/routes/api/: committee.js  index.js  proposal.js  proposer.js  stats.js  user.js
backend/scripts/: cleos.sh  cleos_dev.sh
backend/test/batch/: index.js
backend/test/batch/update_proposals/: index.js
backend/test/batch/update_summary/: index.js
backend/test/batch/update_votings/: _index.js  check_voting.js  index.js  stakeunstake.js  unvote.js  vote.js
backend/test/data/: accounts.js  index.js
backend/test/external_apis/: index.js
backend/test/libs/: index.js
backend/test/routes/api/: committee.js  index.js  proposal.js  proposer.js  stats.js  user.js
backend/tools/: create_wps_info.js
contracts/: .gitignore  CMakeLists.txt  README.md  build.sh
contracts/eosio.wps/: CMakeLists.txt  README.md  build.sh
contracts/eosio.wps/abi/: eosio.wps-acceptprop-rc.md  eosio.wps-approve-rc.md  eosio.wps-checkvote-rc.md  eosio.wps-editproposer-rc.md  eosio.wps-editreviewer-rc.md  eosio.wps-regcommittee-rc.md  eosio.wps-regproposer-rc.md  eosio.wps-regreviewer-rc.md  eosio.wps-rejectfund-rc.md  eosio.wps-rejectprop-rc.md  eosio.wps-rmvreviewer-rc.md  eosio.wps-unvote-rc.md  eosio.wps-vote-rc.md  eosio.wps.abi
contracts/eosio.wps/include/eosio.wps/: committee.hpp  eosio.wps.hpp  proposal.hpp  proposer.hpp  reviewer.hpp
contracts/eosio.wps/src/: committee.cpp  eosio.wps.cpp  proposal.cpp  proposer.cpp  reviewer.cpp  vote.cpp  watchman.cpp
contracts/tests/: CMakeLists.txt  contracts.hpp  contracts.hpp.in  eosio.wps_tests.cpp  main.cpp  test.hpp  test_committee.cpp  test_proposal.cpp  test_proposer.cpp  test_reviewer.cpp  test_wps.cpp
contracts/tests/test_contracts/: eosio.token.wasm
eosio.wps/: proposers.cpp  wps.cpp
(+4 files in other folders)
